<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_main"
    android:weightSum="1238">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="123">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="166.5"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="187">
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="217"
            android:src="@drawable/darling">
        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="187">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="420"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="65.5">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="460"
            android:orientation="horizontal"
            android:background="@drawable/login_sup_background">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="320"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="55">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="43"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20">
                    </LinearLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="280"
                        android:text="@string/login"
                        android:gravity="center"
                        android:textSize="21sp"
                        android:textColor="@color/white_font"
                        android:fontFamily="@font/montserrat_semibold">
                    </TextView>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="53"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/et_uname"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="53"
                        android:hint="@string/usernameoremail"
                        android:textColorHint="@color/hint_font"
                        android:textSize="13sp"
                        android:fontFamily="@font/montserrat_regular"
                        android:maxLines="1"
                        android:background="@android:color/transparent">
                    </EditText>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/hint_font">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="53"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="53"
                        android:hint="@string/password"
                        android:textSize="13sp"
                        android:textColorHint="@color/hint_font"
                        android:fontFamily="@font/montserrat_regular"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent">
                    </EditText>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/hint_font">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_forgotpass"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="170"
                        android:text="@string/forgotpassword"
                        android:textColor="@color/red"
                        android:textSize="10sp"
                        android:textAllCaps="false"
                        android:gravity="bottom|left"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@android:color/transparent">
                    </Button>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="150">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30">
                </LinearLayout>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="65"
                    android:text="@string/login"
                    android:textColor="@color/red"
                    android:textAllCaps="false"
                    android:fontFamily="@font/montserrat_semibold"
                    android:background="@drawable/button_black">
                </Button>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="45">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="65.5">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="128">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="110"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="115.5">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="360"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="45"
                android:text="@string/noaccount"
                android:textColor="@color/white_font"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="13sp"
                android:gravity="center">
            </TextView>
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="65"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_semibold"
                android:background="@drawable/button_red">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="115.5">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="253.5">
    </LinearLayout>
</LinearLayout>