<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1054"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mainSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="87"
            android:orientation="horizontal"
            android:weightSum="591">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="29">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:background="@drawable/extensions">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="28">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="14">
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="502"
                android:text="@string/extensions"
                android:textColor="@color/white_font"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/separator">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_notifySettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="87"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="29">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:background="@drawable/bell">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="28">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="14">
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="502"
                android:text="@string/notification"
                android:textColor="@color/white_font"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/separator">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_secureSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="87"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="29">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:background="@drawable/secure">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="28">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="14">
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="502"
                android:text="@string/security"
                android:textColor="@color/white_font"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/separator">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="678">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65"
            android:weightSum="591"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="135.5">
            </LinearLayout>
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="320"
                android:text="@string/logout"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:background="@drawable/button_black_sup">
            </Button>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="135.5">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>