<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1054">
        <LinearLayout
            android:id="@+id/ll_profile_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="524"
            android:orientation="horizontal"
            android:weightSum="554"
            android:background="@color/black_support">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="501"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="390">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="137"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="54"
                        android:text="Артём"
                        android:textSize="30sp"
                        android:textColor="@color/white_font"
                        android:fontFamily="@font/montserrat_semibold">
                    </TextView>
                    <TextView
                        android:id="@+id/tv_online"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="26"
                        android:text="Онлайн"
                        android:textSize="14sp"
                        android:textColor="@color/white_font"
                        android:fontFamily="@font/montserrat_regular">
                    </TextView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="20">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_profile_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="530"
            android:orientation="horizontal"
            android:background="@color/black_main">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_editInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="501"
                android:orientation="vertical"
                android:weightSum="600">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="39"
                    android:text="@string/account"
                    android:textSize="14sp"
                    android:textColor="@color/white_font"
                    android:fontFamily="@font/montserrat_semibold">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="83"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="mazzi12321@gmail.com"
                        android:textSize="14sp"
                        android:textColor="@color/white_font"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/montserrat_regular">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/press_to_change_email"
                        android:textSize="13sp"
                        android:textColor="@color/hint_font"
                        android:gravity="top"
                        android:fontFamily="@font/montserrat_regular">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/hint_font">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="14">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="83"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/username"
                        android:textSize="14sp"
                        android:textColor="@color/white_font"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/montserrat_regular">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textSize="13sp"
                        android:textColor="@color/hint_font"
                        android:gravity="top"
                        android:fontFamily="@font/montserrat_regular">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/hint_font">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="14">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="83"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_profile_description"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Не хочу жить"
                        android:textSize="14sp"
                        android:textColor="@color/white_font"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/montserrat_regular">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/about_me"
                        android:textSize="13sp"
                        android:textColor="@color/hint_font"
                        android:gravity="top"
                        android:fontFamily="@font/montserrat_regular">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_new_photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:background="@drawable/button_red_2"
        android:translationX="-15dp"
        app:layout_anchor="@id/ll_profile_photo"
        app:layout_anchorGravity="right|bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/new_photo">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>